ChromeBrowserMainExtraPartsAsh: Move tablet_mode_client_.reset() to dtor

ChromeBrowserMainParts::PostMainMessageLoopRun() calls
ChromeBrowserMainExtraPartsAsh::PostMainMessageLoopRun() to destroy all
Ash objects before
BrowserProcessImpl::StartTearDown().

Extensions perform shutdown in BrowserProcessImpl::StartTearDown().

This change allows extensions to remove observers from TabletModeClient.

Bug: 812056
Change-Id: I0c96a9cee72c01ab0e4122ee811eb0535e80e7d2
Reviewed-on: https://chromium-review.googlesource.com/1107031
Commit-Queue: Alexey Baskakov <loyso@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569113}
Former-commit-id: 4325366d69502145fb6ea7cf4137976f18c76e56